Overflow fix in tickets

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -12,9 +12,9 @@ input, textarea, select, button {
   user-select: initial;
 }
 
-// html, body {
-//   overflow: hidden;
-// }
+html, body {
+  overflow: hidden;
+}
 
 html, body, #root {
   margin: 0;
